# Assignment_3_Client

./: CMakeLists.txt  ClientGUI.cpp  Client_App.cpp  Makefile  Makefile.old  Menu.cpp  Menu.h  README.md  Receiver.cpp  Receiver.h  Reciever.cpp  Reciever.h  client_app
Tests/: ReceiverTests.cpp
